# werewolf

./: .env  README.md  versus_runner.py
src/: runner.py
src/werewolf_agents/: pyproject.toml
src/werewolf_agents/autogen_sample/: autogen_single.py  config.yaml  multirunner.py  pyproject.toml  runner.py
src/werewolf_agents/autogen_sample/agent/: main.py  single_agent.py
src/werewolf_agents/cot_sample/: cot_agent.py  multirunner.py  pyproject.toml  runner.py
src/werewolf_agents/cot_sample/agent/: cot_agent.py
src/werewolf_agents/cot_sample/game_results/: game_results_1730733749_2hM.json  game_results_1730734836_Ywn.json  game_results_1730735417_FAA.json  game_results_1730736719_Hda.json  game_results_1730949732_pi4.json  game_results_1730950131_e0H.json  game_results_1730952236_WHT.json  game_results_1730952504_2u5.json  game_results_1730954171_3gN.json  game_results_1730954380_HXV.json  game_results_1731187020_8Ue.json  game_results_1731187666_fVl.json  game_results_1731188560_07N.json  game_results_1731189928_ira.json  game_results_1731190601_wTP.json  game_results_1731191126_5nJ.json  game_results_1731191828_jpq.json  game_results_1731197457_Pak.json  game_results_1731199645_V7q.json  game_results_1731200246_uSL.json  game_results_1731200973_Q6c.json  game_results_1731201683_9sA.json  game_results_1731201974_MkD.json  game_results_1731203072_Kot.json
src/werewolf_agents/sample_agents/: cot_agent.py
src/werewolf_agents/simple_sample/: config.yaml  multirunner.py  pyproject.toml  runner.py
src/werewolf_agents/template_agent/: werewolf_agent_template.py
(+468 files in other folders)
