[tool.poetry]
name = "you agennt"
version = "0.0.1"
description = "A description of your project"
authors = ["your name <your email>"]  # Add your name and email here
packages = [{include = "your_agent"}]  # Add the name of your agent directory here


[tool.poetry.dependencies]
python = "^3.12"
tenacity = "^9.0.0"
openai = "^1.47.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"